Correct profile colors not showing up on artist show section

--- a/app/assets/stylesheets/api/album_show.scss
+++ b/app/assets/stylesheets/api/album_show.scss
@@ -109,6 +109,7 @@
   margin-left: 5px;
   font-size: 12px;
   line-height: 15px;
+  padding-right: 4px;
 }
 
 .trackName {
